# solids

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: pytest.yml
00-p-tetrahedron/: vertex.scad
data/: LpentagonalHexecontahedron.txt  Rhombicosacron.txt  makebunny.sh  polyhedron_list.txt
paper/: main.typ  refs.bib
scad/: annotated_vertex_figures.scad  constants.scad  geometry.scad  geometry_utils.scad  interface.scad  solids.scad  vertex_holders.scad
scad/00-p-tetrahedron/: main.scad
scad/01-p-cube/: main.scad
scad/proto/: support_angles.scad
scripts/: convert_visual_polyhedra.py  download_polyhedra.py  main.py  parser.py  vertexprint.py
scripts/tests/: test_convert_visual_polyhedra.py  test_parser_integration.py  test_vertexprint_integration.py
tests/: test_parser_integration.py
