[project]
name = "vertexprint"
version = "0.1.0"
description = "Generate printable mesh assemblies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pycairo>=1.29.0",
    "pymeshlab>=2025.7.post1",
    "stl-reader>=0.2.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
